removed footer from _config.yml bcz Jekyll error

--- a/_config.yml
+++ b/_config.yml
@@ -309,10 +309,10 @@ compress_html:
   clippings: all
   ignore:
     envs: development
-    
-Footer
-© 2022 GitHub, Inc.
-Footer navigation
-Terms
-Privacy
-Security
+
+# Footer
+# © 2022 GitHub, Inc.
+# Footer navigation
+# Terms
+# Privacy
+# Security
