About page ready

--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Fauzan"
+  name             : "Fauzan Farooqui"
   avatar           : "profile.png"
-  bio              : "Undergrad CS senior at VNIT, India | Deep Learning and Natural Language Processing research enthusiast | Member at IvLabs, VNIT's AI & Robotics Lab"
+  bio              : "Undergrad CS senior at VNIT, India | Deep Learning and Natural Language Processing researcher | Member at IvLabs, VNIT's AI & Robotics Lab"
   location         : "Hyderabad, India | Sharjah, UAE"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
