--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,4 +7,5 @@ main:
   #   url: /archive/
     
   - title: "Resume"
-    url: /files/resume.pdf
+    url: https://drive.google.com/file/d/1lf_559g3T1dkEfL7x_yUlvXaxZk4blx8/view?usp=sharing
+#     url: /files/resume.pdf
