--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "Projects"
     url: /projects/
 
-  - title: "Publications Work"
+  - title: "Publication Work"
     url: /publications/
         
   # - title: "Blog Posts"
