--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Fauzan Farooqui"
 title_separator          : "-"
 name                     : &name "Fauzan Farooqui"
-description              : &description "Research Engineer | 5G | Deep Learning & NLP"
+description              : &description "Deep Learning & NLP"
 url                      : https://fauzanfarooqui.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "fauzanfarooqui/fauzanfarooqui.github.io"
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Fauzan Farooqui"
   avatar           : "profile.png"
-  bio              : "Research Engineer | 5G | Deep Learning and Natural Language Processing"
+  bio              : "Deep Learning and Natural Language Processing"
   location         : "Bangalore, India | Sharjah, UAE"
-  employer         : "C-DoT"
+  employer         : ""
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   # googlescholar    : "http://yourfullgooglescholarurl.com"
   email            : fauzanfarooqui7@gmail.com
