--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Fauzan Farooqui"
   avatar           : "profile.png"
-  bio              : "Deep Learning and Natural Language Processing"
+  bio              : "Research Engineer | Deep Learning and Natural Language Processing | 5G"
   location         : "Bangalore, India | Sharjah, UAE"
   employer         : "C-DoT"
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
