--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Fauzan Farooqui"
 title_separator          : "-"
 name                     : &name "Fauzan Farooqui"
-description              : &description "Deep Learning & NLP"
+description              : &description "Personal Webpage"
 url                      : https://fauzanfarooqui.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "fauzanfarooqui/fauzanfarooqui.github.io"
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Fauzan Farooqui"
   avatar           : "profile.png"
-  bio              : "Research Engineer | Deep Learning and Natural Language Processing | 5G"
+  bio              : "Research Scientist | Deep Learning and Natural Language Processing (NLP) | 5G"
   location         : "Bangalore, India | Sharjah, UAE"
   employer         : "C-DoT"
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
